Fix tags for ranges overlap the calendar after certain amount

--- a/assets/scss/shared-ui/_calendar-range.scss
+++ b/assets/scss/shared-ui/_calendar-range.scss
@@ -207,15 +207,13 @@
 
 		// VARIATION: Show ranges.
 		&.show-ranges {
-			padding-top: #{($sui-gutter-md - 1px) + ($sui-gutter / 2) + 18px};
+			padding-top: $sui-gutter-md;
 
 			.ranges {
 				display: block;
 				flex: 0 0 auto;
-				position: absolute;
-				top: $sui-gutter-md;
-				right: 0;
-				left: 0;
+				margin: 0 auto;
+				max-width: 400px;
 
 				ul {
 					width: 100%;
